# workshop-kedro-huggingface

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  Summarize Reddit posts.ipynb  catalog.yml  credentials.yml  delta_polars_dataset.py  pyproject.toml  requirements.in  requirements.txt  transformers-requirements.in  transformers-requirements.txt
airflow/: README.md
conf/base/: catalog.yml
conf/demo/: credentials.yml
img/: kedro-hf.excalidraw
notebooks/: kedro_catalog.ipynb
src/reddit_summarizer/: settings.py
src/reddit_summarizer/datasets/: __init__.py  delta_polars_dataset.py
src/reddit_summarizer/pipelines/data_processing/: nodes.py  pipeline.py  utils.py
